<resources>
    <string name="app_name">NASAPictureOfTheDay</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Искать в Wiki</string>
    <string name="wiki_helper_text">Не более 20 символов</string>
    <string name="settings">Настройки</string>
    <string name="favourite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="chip_icon">Chip icon</string>
    <string name="ripple_color">Ripple Color</string>
    <string name="background_color">Background Color</string>
    <string name="filter">Filter</string>
    <string name="action">Action</string>
    <string name="choice">Choice</string>
    <string name="entry">Entry</string>
    <string name="chip_default">Default</string>
    <string name="chip">Chip</string>
    <string name="group">Group</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="choose_one">Choose One</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="in">in</string>
    <string name="single">single</string>
    <string name="line">line</string>
    <string name="add">add</string>
    <string name="a">a</string>
    <string name="horizontal">horizontal</string>
    <string name="scroll">scroll</string>
    <string name="close_icon_listener">Close Icon Listener</string>
    <string name="menu_bottom_1">Выбрать тему Custom</string>
    <string name="menu_bottom_2">Выбрать тему Default</string>
    <string name="title_activity_api">ApiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="telescope">Телескоп</string>
    <string name="list">Список</string>
</resources>